--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="row align-items-center">
           <div class="home-text">
             <p>Hello, I'm</p>
-            <h1>John Deo</h1>
+            <h1>Rahul Rai</h1>
             <h2>Frontend web developer</h2>
             <a href="#about" class="btn  link-item">more about me</a>
             <a href="#contact" class="btn  link-item">portfolio</a>
